<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_home_class_item">

        <ImageView
            android:id="@+id/background_image_class_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.2"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/background_image_assignment_home_foreground" />

        <TextView
            android:id="@+id/tv_class_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/placeholder_class_name"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.179" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/placeholder_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_class_name"
            app:layout_constraintVertical_bias="0.164"
            tools:layout_editor_absoluteX="29dp" />

        <TextView
            android:id="@+id/tv_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/placheholder_deadline"
            app:layout_constraintBottom_toBottomOf="@+id/background_image_class_item"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"
            tools:layout_editor_absoluteX="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>