<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="listener"
            type="com.example.studentmanagementoffline.app.presentation.AddAssignmentFragment" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_round"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/text_header_two"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_header"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textfield_assignment_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="Nama Tugas"
                android:textColorHint="@color/blue_6598F1"
                app:boxStrokeColor="@color/blue_6598F1"
                app:boxStrokeWidth="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/class_name_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:background="@color/black"
                android:prompt="@string/pilih_kelas"/>

            <Spinner
                android:id="@+id/mapel_name_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:background="@color/black"
                android:prompt="@string/pilih_mapel"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textfield_detail_assignment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="Deskripsi Tugas"
                android:textColorHint="@color/blue_6598F1"
                app:boxStrokeColor="@color/blue_6598F1"
                app:boxStrokeWidth="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#59D672"
                android:shadowDx="5"
                android:shadowDy="6"
                android:text="Pilih Tanggal" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textAlignment="center"
                android:text="Tanggal Kosong"/>

            <Button
                android:id="@+id/button_add_assignment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#59D672"
                android:shadowDx="5"
                android:shadowDy="6"
                android:onClick="@{() -> listener.insertAssignment()}"
                android:text="Tambah" />

            <Button
                android:id="@+id/button_update_assignment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#59D672"
                android:shadowDx="5"
                android:shadowDy="6"
                android:onClick="@{() -> listener.updateAssignment()}"
                android:text="update" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>